lavapipe assert fails on Windows
Trying to run Vulkan-Cube (https://github.com/raubee/Vulkan-Cube) on lavapipe on Windows, and it assert fails with:
Device 0 : llvmpipe (LLVM 15.0.5, 128 bits)
Assertion failed: chain->base.blit.type == WSI_SWAPCHAIN_BUFFER_BLIT, file ../../src/vulkan/wsi/wsi_common_win32.cpp, line 648
The following patch will make it work, but I don't know if it is a proper fix.
--- a/src/gallium/frontends/lavapipe/lvp_wsi.c
+++ b/src/gallium/frontends/lavapipe/lvp_wsi.c
@@ -43,7 +43,9 @@ lvp_init_wsi(struct lvp_physical_device *physical_device)
if (result != VK_SUCCESS)
return result;
+#ifndef _WIN32
physical_device->wsi_device.wants_linear = true;
+#endif
physical_device->vk.wsi_device = &physical_device->wsi_device;
return VK_SUCCESS;